<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Rivigo</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="username" tools:ignore="MissingTranslation">Username</string>
    <string name="password" tools:ignore="MissingTranslation">Password</string>
    <string name="error_msg" tools:ignore="MissingTranslation">This input requires a value!</string>
    <string name="login" tools:ignore="MissingTranslation">LOG IN</string>
    <string name="forgot_password" tools:ignore="MissingTranslation"><u>FORGOT PASSWORD?</u></string>
    <string name="ok" tools:ignore="MissingTranslation">@android:string/ok</string>
    <string name="fetch_location" tools:ignore="MissingTranslation">Fetch Your Location</string>
    <string name="last_login" tools:ignore="MissingTranslation">Your last login: %1$s</string>
    <string name="hub_supervisor" tools:ignore="MissingTranslation">Hub Supervisor</string>
    <string name="vehicle_number" tools:ignore="MissingTranslation">Vehicle No.</string>
    <string name="vehicle_route" tools:ignore="MissingTranslation">Route</string>
    <string name="client" tools:ignore="MissingTranslation">Client</string>
    <string name="eta" tools:ignore="MissingTranslation">Expected Arrival Time</string>
    <string name="assigned_pilots" tools:ignore="MissingTranslation">Assigned Pilot</string>
    <string name="pilot_in_hub" tools:ignore="MissingTranslation">Pilot In Hub</string>
    <string name="vehicle_in_hub" tools:ignore="MissingTranslation">Vehicle In Hub</string>
    <string name="checklist" tools:ignore="MissingTranslation">Checklist</string>
    <string name="driving_licence" tools:ignore="MissingTranslation">Driving Licence</string>
    <string name="uniform" tools:ignore="MissingTranslation">Uniform</string>
    <string name="non_alcoholic" tools:ignore="MissingTranslation">Sober</string>
    <string name="current_date_and_time">Date and Time:</string>
    <string name="pilot_availability" tools:ignore="MissingTranslation">Pilot Availability</string>
    <string name="assign_pilots" tools:ignore="MissingTranslation">Assign Pilot</string>
    <string name="gps_settings_body" tools:ignore="MissingTranslation">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_settings_title" tools:ignore="MissingTranslation">GPS settings</string>
    <string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="save" tools:ignore="MissingTranslation">Save</string>
    <string name="yes" tools:ignore="MissingTranslation">Yes</string>
    <string name="no" tools:ignore="MissingTranslation">No</string>
    <string name="dashboard" tools:ignore="MissingTranslation">Dashboard</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="sos" tools:ignore="MissingTranslation">SOS</string>
    <string name="upgrade" tools:ignore="MissingTranslation">Updates</string>
    <string name="logout" tools:ignore="MissingTranslation">Log out</string>
    <string name="are_you_sure" tools:ignore="MissingTranslation">Are you sure you want to log out?</string>
    <string name="discard_changes" tools:ignore="MissingTranslation">Are you sure you want to discard changes?</string>
    <string name="language_preferred" tools:ignore="MissingTranslation">Preferred Language : </string>
    <string name="could_not_connect_to_server" tools:ignore="MissingTranslation">No connection. Couldn\'t connect to the server.</string>
    <string name="operational" tools:ignore="MissingTranslation">Operational</string>
    <string name="technical" tools:ignore="MissingTranslation">Technical</string>
    <string name="checklist_item" tools:ignore="MissingTranslation">Checklist item</string>
    <string name="status" tools:ignore="MissingTranslation">Status</string>
    <string name="print" tools:ignore="MissingTranslation">Print</string>
    <string name="email" tools:ignore="MissingTranslation">Email</string>
    <string name="documents" tools:ignore="MissingTranslation">Documents</string>
    <string name="registration_certificate">Registration Certificate</string>
    <string name="fitness_certificate">Fitness Certificate</string>
    <string name="national_permit">National Permit</string>
    <string name="road_tax_booklet">Road Tax Booklet</string>
    <string name="pollution_certificate">Pollution Certificate</string>
    <string name="insurance">Insurance</string>
    <string name="toll_tax_receipt_and_cash_balance">Toll Tax Receipt and Cash Balance</string>
    <string name="grn_bilti">GRN / Bilti</string>
    <string name="seal_intactness">Seal Intactness</string>
    <string name="kits" tools:ignore="MissingTranslation">Kits</string>
    <string name="tool_kit">Tool Kit</string>
    <string name="others">Others (Medical Kit, Torch, Bucket)</string>
    <string name="cleanliness" tools:ignore="MissingTranslation">Cleanliness</string>
    <string name="cabin_cleanliness">Cabin Cleanliness</string>
    <string name="driver">Driver</string>
    <string name="engine_starting">Engine Starting</string>
    <string name="engine_sound">Engine Sound</string>
    <string name="exhaust_emission">Exhaust Emission (Engine)</string>
    <string name="clutch_working">Clutch Working</string>
    <string name="gear_movement">Gear Movement</string>
    <string name="brake_effectiveness">Brake Effectiveness</string>
    <string name="tyre_oil" tools:ignore="MissingTranslation">Tyre &amp; Oil</string>
    <string name="tyres">Tyres (Stones, Cut, Puncture)</string>
    <string name="coolant_leakage">Coolant Leakage</string>
    <string name="engine_oil_leakage">Engine Oil Leakage</string>
    <string name="gear_oil_leakage">Gear Oil Leakage</string>
    <string name="fuel_diesel_leakage">Fuel/Diesel Leakage</string>
    <string name="differential_oil_leakage">Differential Oil Leakage</string>
    <string name="electrical" tools:ignore="MissingTranslation">Electrical</string>
    <string name="headlight">Headlight (Low and High)</string>
    <string name="indicator_and_hazard">Indicator and Hazard</string>
    <string name="horn">Horn</string>
    <string name="wiper">Wiper</string>
    <string name="temperature_on_temperature_gauge">Temperature on Temperature Gauge</string>
    <string name="alternator_charger_light">Alternator Charger Light</string>
    <string name="oil_pressure_warning_light">Oil Pressure Warning Light</string>
    <string name="scratch_dent" tools:ignore="MissingTranslation">Scratch/Dent</string>
    <string name="front">Front</string>
    <string name="left">Left</string>
    <string name="rear">Rear</string>
    <string name="right">Right</string>
    <string name="pilot_contact_info" tools:ignore="MissingTranslation">Contact Info %1$s</string>
    <string name="pilot_change_pilot" tools:ignore="MissingTranslation">Change Pilot</string>
    <string name="pilot_release_pilot" tools:ignore="MissingTranslation">Release Pilot</string>
    <string name="are_you_sure_release" tools:ignore="MissingTranslation"><b>Are you sure you want to release pilot %1$s?</b></string>
    <string name="pilot_availability_title" tools:ignore="MissingTranslation">Available Pilots</string>
    <string name="issue_parsing_data" tools:ignore="MissingTranslation">Issue with parsing data, Please consult with Administrator.</string>
    <string name="please_wait" tools:ignore="MissingTranslation">Please wait&#8230;</string>
    <string name="loading" tools:ignore="MissingTranslation">Loading&#8230;</string>
    <string name="notification_send_to" tools:ignore="MissingTranslation">Notification send to</string>
    <string name="next_hub" tools:ignore="MissingTranslation">Next Hub</string>
    <string name="ashok_leyland" tools:ignore="MissingTranslation">Ashok Leyland</string>
    <string name="menu_search" tools:ignore="MissingTranslation">Search</string>
    <string name="server_not_responding" tools:ignore="MissingTranslation">Server is not responding…</string>
    <string name="dash_board" tools:ignore="MissingTranslation">Dash Board</string>
    <string name="accident" tools:ignore="MissingTranslation">Accident</string>
    <string name="breakdown" tools:ignore="MissingTranslation">Breakdown</string>
    <string name="non_technical" tools:ignore="MissingTranslation">Non-Technical</string>
    <string name="reason">Reason :</string>
    <string name="send">Send</string>
    <string name="check_updates">Check for updates</string>
    <string name="sos_vehicle_no">Please enter VehicleNo.</string>
    <string name="sos_reason">Enter enter Reason.</string>
    <string name="sos_email_success">Email sent successfully.</string>
    <string name="sos_email_failure">Email not sent.</string>
    <string name="sos_email_failure_problem">There is a problem sending the email.</string>
    <string name="not_ok">Not OK</string>
    <string name="more_pilots">Load More Pilots...</string>
    <string name="no_pilot_selected">No Pilot is selected.</string>
    <string name="problem_assign_pilot">Sorry, Problem assigning Pilot.</string>
    <string name="error_releasing_pilot">Sorry, Program releasing Pilot! Try Again!!</string>
    <string name="warning">Warning</string>
    <string name="weekly_off">Weekly off</string>
    <string name="sick">Sick</string>
    <string name="late">Late</string>
    <string name="overduty">Overduty</string>
    <string name="other">Others</string>
    <string name="pilot_selection_warning">Enter a reason why you are not selecting %1$s ?</string>
    <string name="hint_checklist_reason">Enter reason....</string>
    <string name="no_pilots_available">No Pilots available for this time and date.</string>
    <string name="checklist_notok_select_atleastone">Please select atleast one.</string>
    <string name="checklist_notok_reason">Please enter reason field.</string>
    <string name="final_hub_no_need_toassign_pilot">This is the final Hub, no need to assign Pilot.</string>
    <string name="printing_file_not_found">Document not found in server, Please check with concern team.</string>
    <string name="printing_issue_with_download">Issue with downloading file.</string>
    <string name="downloading_wait">Downloading, please wait...</string>
    <string name="vehicle_count">Incoming Vehicles: </string>
    <string name="drivers_planned">Drivers Planned: </string>
    <string name="drivers_not_planned">Drivers to be Planned: </string>
    <string name="last_updated_time">Last Updated : </string>
    <string name="printing_issue_with_download2">File downloaded. Can\'t print, please install HP ePrint.</string>
    <string name="contact_no_ten_digits">contact number should be 10 digits.</string>
    <string name="password_repassword_not_matched">new password and re-entered password is not matched.</string>
    <string name="password_changed_sucess">Password Changed Successfully!!</string>
    <string name="worng_user_info_found">Wrong user information found, Please try again!!</string>
    <string name="no_updates_found">No updates found.</string>
    <string name="chk_status"> Status </string>
    <string name="chk_itemtext">Checklist Item </string>
    <string name="chkLeft_wiper">Wiper(L) </string>
    <string name="chkRight_wiper">Wiper(R) </string>
    <string name="chk_Lheadlight">HeadLight(L)</string>
    <string name="chk_Rheadlight">HeadLight(R)</string>
    <string name="chk_Lslide">Slide Indicator(L)</string>
    <string name="chk_Rslide">Slide Indicator(R)</string>
    <string name="chk_brakelight">BrakeLight</string>
    <string name="chk_horn">Horn</string>
    <string name="chk_next">Next</string>
    <string name="walkarounddesc">Walk around screen</string>
    <string name="changeover_complete_heading">Changeover Complete</string>
    <string name="clean_condition">Has the incoming driver handed the cabin in clean condition ?</string>
</resources>