<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:gravity="center"
    android:background="@color/color_primary"
    android:minHeight="@dimen/common_padding_large1"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/common_padding_small1"
        style="@style/TextViewHeaderStyle"
        android:text="@string/operational"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/common_padding_small1"
        style="@style/TextViewHeaderStyle"
        android:text="@string/checklist_item"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextViewHeaderStyle"
        android:text="@string/status"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        style="@style/TextViewHeaderStyle"
        android:text="@string/print"/>

    <TextView
        android:layout_width="0dp"
        style="@style/TextViewHeaderStyle"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/email"/>



</LinearLayout>