<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:gravity="center"
    android:minHeight="@dimen/common_padding_large1"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextViewHeaderStyle"
        android:layout_marginRight="@dimen/common_padding_smal09"
        android:text="@string/technical"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        style="@style/TextViewHeaderStyle"
        android:layout_marginRight="@dimen/common_padding_smal09"
        android:text="@string/checklist_item"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextViewHeaderStyle"
        android:text="@string/status"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextViewHeaderStyle"
        android:layout_weight="1"
        />



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            style="@style/TextViewStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dashboard" />


        <ImageView
            style="@style/TextViewStyle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_assignment" />
    </LinearLayout>
</LinearLayout>